--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 [dependencies]
 rusqlite = { version = "0.21", features = ["bundled"] }
-#csv = "1.1"
+indicatif = "0.13"
 calamine = "0.16"
 memmap = "0.7"
